--- a/sqi.css
+++ b/sqi.css
@@ -7,7 +7,7 @@ body{
 }
 header{
     background-color: #ffffff;
-    box-shadow: 0px 0px 20px 10px rgb(251, 231, 234);
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -75,9 +75,10 @@ header{
     font-style: bold;
 }
 .start img{
-    width: 350px;
-    /* margin-top: 50px;
-    filter: grayscale(); */
+    width: 300px;
+    height: 250px;
+    /* margin-top: 50px; */
+    filter: grayscale(100%);
 }
 .learn{
    display: flex;
